# banzai-floyds-ui

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  README.md  flake.nix  local-cluster.yaml  pyproject.toml  skaffold.yaml
.github/workflows/: cd.yaml
banzai_floyds_ui/: dump.rdb  manage.py  settings.py
banzai_floyds_ui/api/: urls.py  views.py
banzai_floyds_ui/banzai_floyds_api/: urls.py
banzai_floyds_ui/banzai_floyds_gui/: asgi.py  banzai_floyds_app.py  scaffold.py  urls.py  views.py
banzai_floyds_ui/banzai_floyds_gui/templates/: base.html  floyds.html
banzai_floyds_ui/gui/: app.py  middleware.py  plots.py  scaffold.py  urls.py  views.py  wsgi.py
banzai_floyds_ui/gui/data/: plotly_template.json
banzai_floyds_ui/gui/templates/: base.html  floyds.html
banzai_floyds_ui/gui/utils/: file_utils.py  header_utils.py  plot_utils.py
banzai_floyds_ui/static/: main.css
banzai_floyds_ui/tests/: mock_archive.py
docs/: ui-guide.rst
helm/banzai-floyds-ui/: Chart.yaml  values.yaml
helm/banzai-floyds-ui/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/banzai-floyds-ui/templates/tests/: test-connection.yaml
k8s/base/: deploy-server.yaml  kustomization.yaml  redis-deploy.yaml  redis-service.yaml  settings.env  svc-server.yaml
