[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["banzai_floyds_ui*"]

[tool.setuptools.package-data]
"banzai_floyds_ui" = ["static/*"]
"banzai_floyds_ui.gui" = ["templates/*", "data/*"]

[project]
dynamic = ["version"]
name = "banzai_floyds_ui"
dependencies = [
  "django",
  "dash>=2.17",
  "plotly",
  "django-plotly-dash>=2.3.2",
  "astropy",
  "lcogt_logging",
  "gunicorn",
  "gevent",
  "django-rest-framework",
  "django-bootstrap4",
  "dpd_static_support",
  "dash-bootstrap-components",
  "fontawesomefree",
  "requests",
  "django_redis",
  "whitenoise",
  "httpx",
  "banzai_floyds @ git+https://github.com/lcogt/banzai-floyds@0.11.1",
  "scipy"
]

[project.optional-dependencies]
test = [
    "flask"
]
