[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0",
            "cython", "extension-helpers",
            "numpy>=1.24"]
build-backend = "poetry.core.masonry.api"

[project]
version = "0.5.0"
name = "banzai_floyds_ui"
requires-python = ">=3.10,<4"
description = "UI for BANZAI Data Reduction for FLOYDS spectra"
readme = "README.md"

dependencies = [
  "django",
  "dash>=2.17",
  "plotly",
  "django-plotly-dash>=2.3.2",
  "astropy",
  "lcogt_logging",
  "gunicorn",
  "gevent",
  "django-rest-framework",
  "django-bootstrap4",
  "dpd_static_support",
  "dash-bootstrap-components",
  "fontawesomefree",
  "requests",
  "django_redis",
  "django_extensions",
  "whitenoise",
  "torch",
  "httpx",
  "banzai_floyds @ git+https://github.com/lcogt/banzai-floyds@0.17.0",
  "scipy"
]

[project.optional-dependencies]
test = [
    "flask"
]

[tool.poetry]
packages = [
  { include = "banzai_floyds_ui" }
]

[tool.poetry.dependencies]
torch = [
    { version = "^2.3", source = "pytorch-cpu"},
]

[[tool.poetry.source]]
    name     = "pytorch-cpu"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cpu"
