[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banzai_floyds_ui"
version = "0.6.0"
description = "UI for BANZAI Data Reduction for FLOYDS spectra"
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "django",
    "dash>=2.17",
    "plotly",
    "django-plotly-dash>=2.3.2",
    "astropy",
    "lcogt_logging",
    "gunicorn",
    "gevent",
    "django-rest-framework",
    "django-bootstrap4",
    "dpd_static_support",
    "dash-bootstrap-components",
    "fontawesomefree",
    "requests",
    "django_redis",
    "django_extensions",
    "whitenoise",
    "httpx",
    "banzai_floyds @ git+https://github.com/lcogt/banzai-floyds@0.22.0",
    "scipy",
    "torch",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
test = ["flask"]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin' and extra != 'cuda'" },
  { index = "pytorch-cuda", marker = "sys_platform != 'darwin' and extra == 'cuda'" },
]

[tool.hatch.build.targets.sdist]
include = ["banzai_floyds_ui"]

[tool.hatch.build.targets.wheel]
include = ["banzai_floyds_ui"]
